--- a/src/sass/_text-showcase.scss
+++ b/src/sass/_text-showcase.scss
@@ -81,3 +81,8 @@
     }
 }
 
+.profile .text P {
+    font-size: emCalc(13);
+    font-weight: 500;
+    line-height: 1.2;
+}
